<resources>
    <string name="app_name">مغازه‌دار</string>
    <string name="continue_button">ادامه</string>
    <string name="please_be_patient">لطفا منتظر باشید</string>
    <string name="introducer_code">کد معرف</string>
    <string name="enter_phone">لطفا شماره موبایل خود را وارد نمایید</string>
    <string name="phone_number_length_error">شماره موبایل ۱۱ رقم است</string>
    <string name="enter_verification_code">کد پیامک شده را وارد کنید</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="providers_list">لیست تامین کننده ها</string>
    <string name="orders_list">لیست سفارش‌ها</string>
    <string name="name">نام</string>
    <string name="family">نام‌خانوادگی</string>
    <string name="shopname">نام مغازه</string>
    <string name="address">آدرس</string>
    <string name="shopphone">تلفن ثابت مغازه</string>
    <string name="propertytype">نوع مالکیت مغازه</string>
    <string name="success">اطلاعات با موفقیت ثبت شد</string>
    <string name="failed">مشکلی در ثبت پیش آمده. دوباره تلاش کنید</string>
    <string name="please_wait">لطفا شکیبا باشید...</string>
    <string name="item_name">نام محصول</string>
    <string name="item_brand">برند محصول</string>
    <string name="item_unit">واحد محصول</string>
    <string name="item_price">قیمت یک واحد محصول(تومان)</string>
    <string name="item_description">توضیح محصول</string>
    <string name="suppliers">تامین‌کننده‌ها</string>
    <string name="add_supplier">افزودن تامین‌کننده</string>
    <string name="orders">سفارشات</string>
    <string name="add_order">افزودن سفارش</string>
    <string name="items">اجناس</string>
    <string name="items_list">لیست اجناس</string>
    <string name="introduce_desc">برای افزودن تامین‌کننده جدید لطفا کد معرفی او را وارد نمایید</string>
    <string name="mobile_hint">شماره تلفن همراه(۰۹۱۲۳۴۵۶۷۸۹)</string>
    <string name="order_it">سفارش کالا</string>
    <string name="cancel_order">لغو سفارش</string>
</resources>
