<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/suppliers">
        <menu>
            <item
                android:id="@+id/providers_list"
                android:icon="@drawable/ic_notebook"
                android:title="@string/providers_list" />

            <item
                android:id="@+id/add_supplier"
                android:icon="@drawable/ic_list_add"
                android:title="@string/add_supplier" />
        </menu>
    </item>
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/items_list"
            android:icon="@drawable/ic_notebook"
            android:title="@string/items_list" />
        <item
            android:id="@+id/orders_list"
            android:icon="@drawable/ic_notebook"
            android:title="@string/orders_list" />

    </group>


<!--
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/orders_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/orders_list" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
