<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/introduce_desc"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_weight="50"
                android:layout_height="wrap_content"
                android:textColorHint="@color/text">

                <AutoCompleteTextView
                    android:id="@+id/introduce_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:hint="@string/introducer_code"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:nextFocusDown="@+id/continue_button"
                    android:textColor="@color/text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/continue_button"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_button" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>